# cyberwatch

./: .env.example  .gitignore  INSTALL.md  LICENSE  README.md  _diag.py  pyproject.toml  requirements.txt  watch-and-build.ps1
.github/workflows/: daily-digest.yml
config/: config.yaml
docs/: README.md
scripts/: daily_digest_cloud.py  install_task.ps1  purge_pipeline.py  run_pipeline.py  uninstall_task.ps1
src/: __init__.py  main.py
src/core/: __init__.py  content_fetcher.py  emailer.py  pipeline.py  scraper.py  summarizer.py  summary_generator.py  verifier.py  weekly_scheduler.py
src/gui/: __init__.py  flow_layout.py  main_window.py  styles.py  widgets.py
src/models/: __init__.py  database.py
src/utils/: __init__.py  config.py
templates/: critical_alert.html  digest.html
tests/: __init__.py  test_config.py  test_database.py  test_scraper.py
