[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberwatch"
version = "0.1.0"
description = "Agent IA de veille cybersécurité - scraping, synthèse LLM, alertes email"
readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Yan"},
]

dependencies = [
    "PySide6>=6.7.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "ollama>=0.3.0",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.1",
    "Jinja2>=3.1.4",
    "schedule>=1.2.2",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "PyInstaller>=6.8.0",
    "ruff>=0.5.0",
]

[project.scripts]
cyberwatch = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]  # allow assert in tests
